refactor dtos to use record