@@ -2,8 +2,10 @@ package com.pro.list_tick.shopping_list.mapper;
 
 import java.util.ArrayList;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
-import com.pro.list_tick.shopping_list.dto.ExpenseDTO;
+import com.pro.list_tick.shopping_list.dto.ExpenseRequestDTO;
+import com.pro.list_tick.shopping_list.dto.ExpenseResponseDTO;
 import com.pro.list_tick.shopping_list.model.Expense;
 
 public class ExpenseMapper {
@@ -12,41 +14,29 @@ public class ExpenseMapper {
     throw new IllegalStateException("Utility class");
   }
 
-  public static Expense toModel(ExpenseDTO expenseDTO) {
+  public static Expense toModel(ExpenseRequestDTO expenseRequestDTO) {
     Expense expense = new Expense();
     if (Objects.nonNull(expense.getId())) {
-      expense.setId(expenseDTO.getId());
+      expense.setId(expenseRequestDTO.id());
     }
-    expense.setAmount(expenseDTO.getAmount());
-    expense.setCurrency(expenseDTO.getCurrency());
-    expense.setReimbursed(expenseDTO.getReimbursed());
+    expense.setAmount(expenseRequestDTO.amount());
+    expense.setCurrency(expenseRequestDTO.currency());
+    expense.setReimbursed(expenseRequestDTO.reimbursed());
     expense.setItems(new ArrayList<>());
     return expense;
   }
 
-  public static ExpenseDTO toDto(Expense expense) {
-    ExpenseDTO expenseDTO = new ExpenseDTO();
-    if (Objects.nonNull(expense.getId())) {
-      expenseDTO.setId(expense.getId());
-    }
-    expenseDTO.setAmount(expense.getAmount());
-    expenseDTO.setCurrency(expense.getCurrency());
-    expenseDTO.setReimbursed(expense.getReimbursed());
-    expenseDTO.setShoppingListId(expense.getShoppingList().getId());
-    return expenseDTO;
-  }
-
-  public static ExpenseDTO toDtoWithItems(Expense expense) {
-    ExpenseDTO expenseDTO = toDto(expense);
-    if (Objects.nonNull(expense.getItems()) &&
-        !expense.getItems().isEmpty()) {
-      var itemDTOs = expense.getItems()
-          .stream()
-          .map(ItemMapper::toItemNameDto)
-          .toList();
-      expenseDTO.setItems(itemDTOs);
-    }
-    return expenseDTO;
+  public static ExpenseResponseDTO toResponseDto(Expense expense) {
+    return new ExpenseResponseDTO(
+        expense.getId(),
+        expense.getAmount(),
+        expense.getCurrency(),
+        expense.getReimbursed(),
+        expense.getShoppingList().getId(),
+        expense.getItems().stream()
+            .map(ItemMapper::toResponseDTO)
+            .collect(Collectors.toList())
+    );
   }
 
 }
